--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "short-uuid": "^3.1.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
