--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-images": "^1.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "short-uuid": "^3.1.1"
+    "sass": "^1.26.5",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
