--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next-images": "^1.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^11.0.1",
     "sass": "^1.26.5",
     "uuid": "^8.1.0"
   },
