--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "firebase": "^7.14.5",
     "next": "latest",
     "next-images": "^1.4.0",
     "react": "^16.12.0",
