--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^7.14.5",
     "next": "latest",
     "next-images": "^1.4.0",
+    "rc-progress": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
