--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
+    "react-stores": "^5.0.5",
     "sass": "^1.26.5",
     "uuid": "^8.1.0"
   },
