--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
+    "firebase-admin": "^8.12.1",
     "next": "latest",
-    "next-images": "^1.4.0",
+    "next-assets-import": "0.0.2",
     "rc-progress": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
     "react-stores": "^5.0.5",
     "sass": "^1.26.5",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "wavesurfer.js": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/uuid": "^8.0.0",
+    "@types/wavesurfer.js": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
