--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
     "firebase-admin": "^8.12.1",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "next": "latest",
     "next-assets-import": "0.0.2",
     "rc-progress": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
-    "react-stores": "^5.0.5",
     "sass": "^1.26.5",
     "uuid": "^8.1.0",
     "wavesurfer.js": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
