--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
+    "react-firebaseui": "^4.1.0",
     "sass": "^1.26.5",
     "uuid": "^8.1.0",
     "wavesurfer.js": "^3.3.3"
