working on track component, track editing and displaying track ingo

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         ],
         "linebreak-style": "off",
         "object-curly-newline": "off",
-        "no-unused-vars": "warn"
+        "no-unused-vars": "warn",
+        "quotes": "error"
     }
 }
