--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "next": "latest",
-    "next-assets-import": "0.0.2",
+    "next-react-svg": "^1.1.1",
     "rc-progress": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
