--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "next": "latest",
+    "next-images": "^1.4.0",
     "next-react-svg": "^1.1.1",
     "rc-progress": "^3.0.0",
     "react": "^16.12.0",
