--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@react-hook/window-size": "^2.1.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
     "firebase-admin": "^8.12.1",
