--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-admin": "^8.12.1",
     "next": "latest",
     "next-images": "^1.4.0",
+    "node-blob": "0.0.2",
     "rc-progress": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
