--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         ],
         "linebreak-style": "off",
         "object-curly-newline": "off",
+        "operator-linebreak": "off",
         "no-unused-vars": "warn",
         "quotes": "error"
     }
