--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@react-hook/window-size": "^2.1.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
     "firebase-admin": "^8.12.1",
@@ -36,10 +35,13 @@
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-config-airbnb-typescript-prettier": "^3.1.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "prettier": "^2.0.5",
     "typescript": "3.7.3"
   },
   "license": "ISC"
