--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-images": "^1.4.0",
     "node-blob": "0.0.2",
     "rc-progress": "^3.0.0",
+    "rc-slider": "^9.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
@@ -27,6 +28,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@types/node": "^12.12.21",
+    "@types/rc-slider": "^8.6.6",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/uuid": "^8.0.0",
