--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "isolatedModules": true
   },
   "exclude": [
     "node_modules"
