--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "with-typescript",
+  "name": "wippy",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
+    "clean": "rm dist/bundle.js",
+    "build-dev": "webpack -d --mode development",
+    "build-prod": "webpack -p --mode production",
+    "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
-    "firebase-admin": "^8.12.1",
-    "next": "latest",
-    "next-images": "^1.4.0",
     "node-blob": "0.0.2",
     "rc-progress": "^3.0.0",
     "rc-slider": "^9.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
+    "react-hot-loader": "^4.12.21",
     "react-keyboard-event-handler": "^1.5.4",
     "sass": "^1.26.5",
     "uuid": "^8.1.0",
     "wavesurfer.js": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@hot-loader/react-dom": "^16.13.0",
     "@types/node": "^12.12.21",
     "@types/rc-slider": "^8.6.6",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.0.0",
     "@types/wavesurfer.js": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "eslint-import-resolver-typescript": "^2.0.0",
@@ -42,8 +45,18 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
-    "typescript": "3.7.3"
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "license": "ISC"
 }
