--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.1",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.21",
     "react-keyboard-event-handler": "^1.5.4",
+    "react-router-dom": "^5.2.0",
     "sass": "^1.26.5",
     "uuid": "^8.1.0",
     "wavesurfer.js": "^3.3.3"
@@ -31,6 +33,8 @@
     "@types/rc-slider": "^8.6.6",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
     "@types/wavesurfer.js": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
