--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.6.1",
+    "stylelint-order": "^4.1.0",
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
