--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
+    "html-loader": "^1.1.0",
     "node-blob": "0.0.2",
     "rc-progress": "^3.0.0",
     "rc-slider": "^9.3.1",
