--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "allowJs": true,
+    "allowJs": false,
     "baseUrl": ".",
     "alwaysStrict": true,
     "esModuleInterop": true,
