--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
+    "dayjs": "^1.8.32",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
     "html-loader": "^1.1.0",
