--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "dayjs": "^1.8.32",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
@@ -30,6 +31,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@hot-loader/react-dom": "^16.13.0",
+    "@types/classnames": "^2.2.10",
     "@types/node": "^12.12.21",
     "@types/rc-slider": "^8.6.6",
     "@types/react": "^16.9.44",
