--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
