--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "firebase": "^9.15.0",
+    "nanoid": "^4.0.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
