--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
     "next": "13.0.6",
+    "prettier-plugin-organize-imports": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
