--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "classnames": "^2.3.2",
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
     "next": "13.0.6",
-    "prettier-plugin-organize-imports": "^3.2.1",
+    "rc-progress": "^3.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -26,6 +27,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "prettier": "^2.8.1",
+    "prettier-plugin-organize-imports": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4"
   }
