--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "typescript": "4.9.4"
+    "spacetime": "^7.3.0",
+    "typescript": "4.9.4",
+    "wavesurfer.js": "^6.4.0"
   },
   "devDependencies": {
+    "@types/wavesurfer.js": "^6.0.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "prettier": "^2.8.1",
