--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
-    "@types/node": "18.11.12",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
     "classnames": "^2.3.2",
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
@@ -21,11 +18,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-spinners": "^0.13.7",
     "spacetime": "^7.3.0",
+    "throttle-debounce": "^5.0.0",
     "typescript": "4.9.4",
     "wavesurfer.js": "^6.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/throttle-debounce": "^5.0.0",
     "@types/wavesurfer.js": "^6.0.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
