--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-keyboard-event-handler": "^1.5.4",
     "react-spinners": "^0.13.7",
     "spacetime": "^7.3.0",
     "throttle-debounce": "^5.0.0",
@@ -28,6 +29,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-keyboard-event-handler": "^1.5.2",
     "@types/throttle-debounce": "^5.0.0",
     "@types/wavesurfer.js": "^6.0.3",
     "autoprefixer": "^10.4.13",
