--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "spacetime": "^7.3.0",
     "throttle-debounce": "^5.0.0",
     "typescript": "4.9.4",
+    "unmute-ios-audio": "^3.3.0",
     "wavesurfer.js": "^6.4.0"
   },
   "devDependencies": {
