--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "classnames": "^2.3.2",
+    "cookies-next": "^2.1.1",
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
     "next": "13.0.6",
