Migrate to Next.js and Tailwind (#36)

--- a/package.json
+++ b/package.json
@@ -1,68 +1,44 @@
 {
   "name": "wippy",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "webpack -p --mode production",
-    "start": "webpack-dev-server --mode development"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
-    "dayjs": "^1.8.32",
-    "dotenv": "^8.2.0",
-    "firebase": "^7.14.5",
-    "html-loader": "^1.1.0",
-    "node-blob": "0.0.2",
-    "rc-progress": "^3.0.0",
-    "rc-slider": "^9.3.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-dropzone": "^11.0.1",
-    "react-helmet": "^6.1.0",
+    "@heroicons/react": "^2.0.13",
+    "classnames": "^2.3.2",
+    "cookies-next": "^2.1.1",
+    "firebase": "^9.15.0",
+    "nanoid": "^4.0.0",
+    "next": "13.0.6",
+    "rc-progress": "^3.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-keyboard-event-handler": "^1.5.4",
-    "react-router-dom": "^5.2.0",
-    "sass": "^1.26.5",
-    "uuid": "^8.1.0",
-    "wavesurfer.js": "^3.3.3"
+    "react-spinners": "^0.13.7",
+    "spacetime": "^7.3.0",
+    "throttle-debounce": "^5.0.0",
+    "typescript": "4.9.4",
+    "unmute-ios-audio": "^3.3.0",
+    "wavesurfer.js": "^6.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@types/classnames": "^2.2.10",
-    "@types/node": "^12.12.21",
-    "@types/rc-slider": "^8.6.6",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/uuid": "^8.0.0",
-    "@types/wavesurfer.js": "^3.3.0",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript-prettier": "^3.1.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.0.5",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.6.1",
-    "stylelint-order": "^4.1.0",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "license": "ISC"
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-keyboard-event-handler": "^1.5.2",
+    "@types/throttle-debounce": "^5.0.0",
+    "@types/wavesurfer.js": "^6.0.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.1",
+    "prettier-plugin-organize-imports": "^3.2.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwindcss": "^3.2.4"
+  }
 }
